samples/_failures_safe/1761630036_5ca2a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97333151.c: In function ‘main’:
./samples/SAFE/__tmp_97333151.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
